@@ -1,3 +1,7 @@
+2012-09-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Corrected call to wrong error message, resolves #40803
+
 2011-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added option for faking user agent, resolves #29767
